--- a/includes/css/catalogue-styles.css
+++ b/includes/css/catalogue-styles.css
@@ -1,24 +1,24 @@
-#wpc-catalogue-wrapper{
+#wpc-catalogue-wrapper {
 }
-#wpc-catalogue-wrapper h4{
+#wpc-catalogue-wrapper h4 {
 	font-size:20px;
 	color:#999999;
 	font-weight:normal;
 	margin-bottom: 20px;
 }
-#wpc-col-1{
+#wpc-col-1 {
 	width:219px;
 	float:left;
 	margin: 0 28px 0 0;
 	line-height: inherit;
 }
-#wpc-col-1 ul{
+#wpc-col-1 ul {
 	margin:0;
 	padding:0;
 	list-style:none;
 	line-height: inherit;
 }
-#wpc-col-1 ul li{
+#wpc-col-1 ul li {
 	list-style:none;
 	padding: 0;
 	margin: 0;
@@ -27,67 +27,75 @@
 #wpc-col-1 ul li:last-child {
 	background: none;
 }
-#wpc-col-1 ul li a{
+#wpc-col-1 ul li a {
 	display:block;
 	color:#3d484e;
 	font-size:18px;
 	text-decoration:none;
 	padding:10px 30px 10px 21px;
-	background: url(images/sidebar-sprtr.gif) repeat-y 195px 0; 
+	background: url(images/sidebar-sprtr.gif) repeat-y 195px 0;
 	text-transform: capitalize;
 }
-#wpc-col-1 ul li a:hover, #wpc-col-1 ul li.active-wpc-cat a{
-	border-right:none; 
+#wpc-col-1 ul li a:hover, #wpc-col-1 ul li.active-wpc-cat a {
+	border-right:none;
 	background:url(images/bgs-1.png) no-repeat left top;
 	color:#ffffff;
 }
-#wpc-col-2{
+#wpc-col-2 {
 	width: 712px;
 	float:left;
 }
-.wpc-product{
+.wpc-product {
 	border-bottom: #C7C7C7 1px solid;
 	float: left;
 	margin: 0 15px 27px 0;
 }
-.wpc-img{
+.wpc-img {
 	border: 5px solid #dcdbdb;
 	margin-bottom: 10px;
 	background: #dcdbdb;
 	font-size: 0;
 }
+.wpc-next-prev {
+}
+.wpc-next-prev a[rel="next"] {
+	float:right;
+}
 .wpc-img:hover {
 	border: 5px solid #15845e;
 }
-.wpc-img img{
+.wpc-img img {
 	border-radius:0;
-	box-shadow: none ;
+	box-shadow: none;
 }
-.wpc-title{
+.wpc-title {
 	color: #15845e;
 	padding: 0 7px 20px;
 	line-height: inherit;
 	margin: 0;
 }
-.wpc-title a{
+.wpc-title a {
 	font-size: 14px;
 	color: #333333;
 	text-decoration:none;
 	display:block;
 	background: url(images/arrow.png) no-repeat right 5px;
 }
-.wpc-title a:hover{
+.wpc-title a:hover {
 	color: #15845e;
 	background-position: right -18px;
 }
-.wpc-title span{
+.wpc-title span {
 	float:right;
 }
-.wpc-paginations{
+.wpc-paginations {
 	clear:both;
 	padding:0 0 0 7px;
 }
-.wpc-paginations a{
+.product-price {
+	float:right;
+}
+.wpc-paginations a {
 	display:block;
 	width:30px;
 	height:30px;
@@ -99,20 +107,20 @@
 	text-decoration:none;
 	margin:0 2px;
 }
-.wpc-paginations a:hover, .wpc-paginations .active-wpc-page{
+.wpc-paginations a:hover, .wpc-paginations .active-wpc-page {
 	background-position:bottom;
 	color:#FFF;
 }
-.product-img-view{
+.product-img-view {
 	float:left;
 	border:#dcdbdb 5px solid;
 	margin:0 14px 0 0;
 }
-.wpc-product-img{
+.wpc-product-img {
 	width:161px;
 	float: right;
 }
-.new-prdct-img{
+.new-prdct-img {
 	border:#dcdbdb 5px solid;
 	margin-bottom:8px;
 	font-size: 0;
@@ -121,19 +129,16 @@
 .new-prdct-img img {
 	cursor: pointer;
 }
-
 #wpc-product-gallery {
 	padding: 0 0 20px;
 }
-
 .clear {
 	clear: both;
 	line-height: 0;
 	font-size: 0;
 }
-
-.wp-catalogue-bradcrumb{
-	margin:20px 0;	
+.wp-catalogue-bradcrumb {
+	margin:20px 0;
 }
 .entry-content {
 	line-height: inherit !important;
