--- a/includes/css/admin-styles.css
+++ b/includes/css/admin-styles.css
@@ -161,5 +161,10 @@ div.wpc-headings{
 	margin-top:15px;	
 }
 
+.inn_temp {
+	line-height: 16px;
+	font-family: "Courier New", Courier, monospace;
+	resize: none;
+}
 
 
